# yars

./: Cargo.toml  LICENSE  README.md
yars-cli/: Cargo.toml
yars-cli/src/: main.rs
yars-lib/: Cargo.toml
yars-lib/src/: instruction.rs  lib.rs  memory.rs  processor.rs  register.rs  simulator.rs
